@@ -13,7 +13,7 @@ name=jgoodies-looks
 spec.version=2.4
 impl.version=2.4.0b4
 version.name=2.4 Beta4
-dist.version=2_4_0-BETA4-20100916
+dist.version=2_4_0-BETA4-20100923
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
